--- a/src/assets/src/app.scss
+++ b/src/assets/src/app.scss
@@ -27,3 +27,12 @@
     }
   }
 }
+
+.grid-view__action-column {
+  &, .btn-group {
+    white-space: nowrap;
+  }
+  .btn-group {
+    display: flex;
+  }
+}
